--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Brown.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Brown.axaml
@@ -2,32 +2,32 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Default">
-            <Color x:Key="AccentColor0">#FEFDFC</Color>
-            <Color x:Key="AccentColor1">#FCF9F6</Color>
-            <Color x:Key="AccentColor2">#F6EEE7</Color>
-            <Color x:Key="AccentColor3">#F0E4D9</Color>
-            <Color x:Key="AccentColor4">#EBDACA</Color>
-            <Color x:Key="AccentColor5">#E4CDB7</Color>
-            <Color x:Key="AccentColor6">#DCBC9F</Color>
-            <Color x:Key="AccentColor7">#CEA37E</Color>
-            <Color x:Key="AccentColor8">#AD7F58</Color>
-            <Color x:Key="AccentColor9">#A07553</Color>
-            <Color x:Key="AccentColor10">#815E46</Color>
-            <Color x:Key="AccentColor11">#3E332E</Color>
+            <Color x:Key="Accent0Color">#FEFDFC</Color>
+            <Color x:Key="Accent1Color">#FCF9F6</Color>
+            <Color x:Key="Accent2Color">#F6EEE7</Color>
+            <Color x:Key="Accent3Color">#F0E4D9</Color>
+            <Color x:Key="Accent4Color">#EBDACA</Color>
+            <Color x:Key="Accent5Color">#E4CDB7</Color>
+            <Color x:Key="Accent6Color">#DCBC9F</Color>
+            <Color x:Key="Accent7Color">#CEA37E</Color>
+            <Color x:Key="Accent8Color">#AD7F58</Color>
+            <Color x:Key="Accent9Color">#A07553</Color>
+            <Color x:Key="Accent11Color">#815E46</Color>
+            <Color x:Key="Accent12Color">#3E332E</Color>
         </ResourceDictionary>
         <ResourceDictionary x:Key="Dark">
-            <Color x:Key="AccentColor0">#12110F</Color>
-            <Color x:Key="AccentColor1">#1C1816</Color>
-            <Color x:Key="AccentColor2">#28211D</Color>
-            <Color x:Key="AccentColor3">#322922</Color>
-            <Color x:Key="AccentColor4">#3E3128</Color>
-            <Color x:Key="AccentColor5">#4D3C2F</Color>
-            <Color x:Key="AccentColor6">#614A39</Color>
-            <Color x:Key="AccentColor7">#7C5F46</Color>
-            <Color x:Key="AccentColor8">#AD7F58</Color>
-            <Color x:Key="AccentColor9">#B88C67</Color>
-            <Color x:Key="AccentColor10">#DBB594</Color>
-            <Color x:Key="AccentColor11">#F2E1CA</Color>
+            <Color x:Key="Accent0Color">#12110F</Color>
+            <Color x:Key="Accent1Color">#1C1816</Color>
+            <Color x:Key="Accent2Color">#28211D</Color>
+            <Color x:Key="Accent3Color">#322922</Color>
+            <Color x:Key="Accent4Color">#3E3128</Color>
+            <Color x:Key="Accent5Color">#4D3C2F</Color>
+            <Color x:Key="Accent6Color">#614A39</Color>
+            <Color x:Key="Accent7Color">#7C5F46</Color>
+            <Color x:Key="Accent8Color">#AD7F58</Color>
+            <Color x:Key="Accent9Color">#B88C67</Color>
+            <Color x:Key="Accent11Color">#DBB594</Color>
+            <Color x:Key="Accent12Color">#F2E1CA</Color>
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
