--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Green.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Green.axaml
@@ -1,32 +1,32 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Default"><Color x:Key="AccentColor0">#FBFEFC</Color>
-            <Color x:Key="AccentColor1">#F4FBF6</Color>
-            <Color x:Key="AccentColor2">#E6F6EB</Color>
-            <Color x:Key="AccentColor3">#D6F1DF</Color>
-            <Color x:Key="AccentColor4">#C4E8D1</Color>
-            <Color x:Key="AccentColor5">#ADDDC0</Color>
-            <Color x:Key="AccentColor6">#8ECEAA</Color>
-            <Color x:Key="AccentColor7">#5BB98B</Color>
-            <Color x:Key="AccentColor8">#30A46C</Color>
-            <Color x:Key="AccentColor9">#2B9A66</Color>
-            <Color x:Key="AccentColor10">#218358</Color>
-            <Color x:Key="AccentColor11">#193B2D</Color>
+        <ResourceDictionary x:Key="Default"><Color x:Key="Accent0Color">#FBFEFC</Color>
+            <Color x:Key="Accent1Color">#F4FBF6</Color>
+            <Color x:Key="Accent2Color">#E6F6EB</Color>
+            <Color x:Key="Accent3Color">#D6F1DF</Color>
+            <Color x:Key="Accent4Color">#C4E8D1</Color>
+            <Color x:Key="Accent5Color">#ADDDC0</Color>
+            <Color x:Key="Accent6Color">#8ECEAA</Color>
+            <Color x:Key="Accent7Color">#5BB98B</Color>
+            <Color x:Key="Accent8Color">#30A46C</Color>
+            <Color x:Key="Accent9Color">#2B9A66</Color>
+            <Color x:Key="Accent11Color">#218358</Color>
+            <Color x:Key="Accent12Color">#193B2D</Color>
         </ResourceDictionary>
         <ResourceDictionary x:Key="Dark">
-            <Color x:Key="AccentColor0">#0E1512</Color>
-            <Color x:Key="AccentColor1">#121B17</Color>
-            <Color x:Key="AccentColor2">#132D21</Color>
-            <Color x:Key="AccentColor3">#113B29</Color>
-            <Color x:Key="AccentColor4">#174933</Color>
-            <Color x:Key="AccentColor5">#20573E</Color>
-            <Color x:Key="AccentColor6">#28684A</Color>
-            <Color x:Key="AccentColor7">#2F7C57</Color>
-            <Color x:Key="AccentColor8">#30A46C</Color>
-            <Color x:Key="AccentColor9">#33B074</Color>
-            <Color x:Key="AccentColor10">#3DD68C</Color>
-            <Color x:Key="AccentColor11">#B1F1CB</Color>
+            <Color x:Key="Accent0Color">#0E1512</Color>
+            <Color x:Key="Accent1Color">#121B17</Color>
+            <Color x:Key="Accent2Color">#132D21</Color>
+            <Color x:Key="Accent3Color">#113B29</Color>
+            <Color x:Key="Accent4Color">#174933</Color>
+            <Color x:Key="Accent5Color">#20573E</Color>
+            <Color x:Key="Accent6Color">#28684A</Color>
+            <Color x:Key="Accent7Color">#2F7C57</Color>
+            <Color x:Key="Accent8Color">#30A46C</Color>
+            <Color x:Key="Accent9Color">#33B074</Color>
+            <Color x:Key="Accent11Color">#3DD68C</Color>
+            <Color x:Key="Accent12Color">#B1F1CB</Color>
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
