--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Pink.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Pink.axaml
@@ -2,32 +2,32 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Default">
-            <Color x:Key="AccentColor0">#FFFCFE</Color>
-            <Color x:Key="AccentColor1">#FEF7FB</Color>
-            <Color x:Key="AccentColor2">#FEE9F5</Color>
-            <Color x:Key="AccentColor3">#FBDCEF</Color>
-            <Color x:Key="AccentColor4">#F6CEE7</Color>
-            <Color x:Key="AccentColor5">#EFBFDD</Color>
-            <Color x:Key="AccentColor6">#E7ACD0</Color>
-            <Color x:Key="AccentColor7">#DD93C2</Color>
-            <Color x:Key="AccentColor8">#D6409F</Color>
-            <Color x:Key="AccentColor9">#CF3897</Color>
-            <Color x:Key="AccentColor10">#C2298A</Color>
-            <Color x:Key="AccentColor11">#651249</Color>
+            <Color x:Key="Accent0Color">#FFFCFE</Color>
+            <Color x:Key="Accent1Color">#FEF7FB</Color>
+            <Color x:Key="Accent2Color">#FEE9F5</Color>
+            <Color x:Key="Accent3Color">#FBDCEF</Color>
+            <Color x:Key="Accent4Color">#F6CEE7</Color>
+            <Color x:Key="Accent5Color">#EFBFDD</Color>
+            <Color x:Key="Accent6Color">#E7ACD0</Color>
+            <Color x:Key="Accent7Color">#DD93C2</Color>
+            <Color x:Key="Accent8Color">#D6409F</Color>
+            <Color x:Key="Accent9Color">#CF3897</Color>
+            <Color x:Key="Accent11Color">#C2298A</Color>
+            <Color x:Key="Accent12Color">#651249</Color>
         </ResourceDictionary>
         <ResourceDictionary x:Key="Dark">
-            <Color x:Key="AccentColor0">#191117</Color>
-            <Color x:Key="AccentColor1">#21121D</Color>
-            <Color x:Key="AccentColor2">#37172F</Color>
-            <Color x:Key="AccentColor3">#4B143D</Color>
-            <Color x:Key="AccentColor4">#591C47</Color>
-            <Color x:Key="AccentColor5">#692955</Color>
-            <Color x:Key="AccentColor6">#833869</Color>
-            <Color x:Key="AccentColor7">#A84885</Color>
-            <Color x:Key="AccentColor8">#D6409F</Color>
-            <Color x:Key="AccentColor9">#DE51A8</Color>
-            <Color x:Key="AccentColor10">#FF8DCC</Color>
-            <Color x:Key="AccentColor11">#FDD1EA</Color>
+            <Color x:Key="Accent0Color">#191117</Color>
+            <Color x:Key="Accent1Color">#21121D</Color>
+            <Color x:Key="Accent2Color">#37172F</Color>
+            <Color x:Key="Accent3Color">#4B143D</Color>
+            <Color x:Key="Accent4Color">#591C47</Color>
+            <Color x:Key="Accent5Color">#692955</Color>
+            <Color x:Key="Accent6Color">#833869</Color>
+            <Color x:Key="Accent7Color">#A84885</Color>
+            <Color x:Key="Accent8Color">#D6409F</Color>
+            <Color x:Key="Accent9Color">#DE51A8</Color>
+            <Color x:Key="Accent11Color">#FF8DCC</Color>
+            <Color x:Key="Accent12Color">#FDD1EA</Color>
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
