--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Red.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Red.axaml
@@ -1,32 +1,32 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Default"><Color x:Key="AccentColor0">#FFFCFC</Color>
-            <Color x:Key="AccentColor1">#FFF7F7</Color>
-            <Color x:Key="AccentColor2">#FEEBEC</Color>
-            <Color x:Key="AccentColor3">#FFDBDC</Color>
-            <Color x:Key="AccentColor4">#FFCDCE</Color>
-            <Color x:Key="AccentColor5">#FDBDBE</Color>
-            <Color x:Key="AccentColor6">#F4A9AA</Color>
-            <Color x:Key="AccentColor7">#EB8E90</Color>
-            <Color x:Key="AccentColor8">#E5484D</Color>
-            <Color x:Key="AccentColor9">#DC3E42</Color>
-            <Color x:Key="AccentColor10">#CE2C31</Color>
-            <Color x:Key="AccentColor11">#641723</Color>
+        <ResourceDictionary x:Key="Default"><Color x:Key="Accent0Color">#FFFCFC</Color>
+            <Color x:Key="Accent1Color">#FFF7F7</Color>
+            <Color x:Key="Accent2Color">#FEEBEC</Color>
+            <Color x:Key="Accent3Color">#FFDBDC</Color>
+            <Color x:Key="Accent4Color">#FFCDCE</Color>
+            <Color x:Key="Accent5Color">#FDBDBE</Color>
+            <Color x:Key="Accent6Color">#F4A9AA</Color>
+            <Color x:Key="Accent7Color">#EB8E90</Color>
+            <Color x:Key="Accent8Color">#E5484D</Color>
+            <Color x:Key="Accent9Color">#DC3E42</Color>
+            <Color x:Key="Accent11Color">#CE2C31</Color>
+            <Color x:Key="Accent12Color">#641723</Color>
         </ResourceDictionary>
         <ResourceDictionary x:Key="Dark">
-            <Color x:Key="AccentColor0">#191111</Color>
-            <Color x:Key="AccentColor1">#201314</Color>
-            <Color x:Key="AccentColor2">#3B1219</Color>
-            <Color x:Key="AccentColor3">#500F1C</Color>
-            <Color x:Key="AccentColor4">#611623</Color>
-            <Color x:Key="AccentColor5">#72232D</Color>
-            <Color x:Key="AccentColor6">#8C333A</Color>
-            <Color x:Key="AccentColor7">#B54548</Color>
-            <Color x:Key="AccentColor8">#E5484D</Color>
-            <Color x:Key="AccentColor9">#EC5D5E</Color>
-            <Color x:Key="AccentColor10">#FF9592</Color>
-            <Color x:Key="AccentColor11">#FFD1D9</Color>
+            <Color x:Key="Accent0Color">#191111</Color>
+            <Color x:Key="Accent1Color">#201314</Color>
+            <Color x:Key="Accent2Color">#3B1219</Color>
+            <Color x:Key="Accent3Color">#500F1C</Color>
+            <Color x:Key="Accent4Color">#611623</Color>
+            <Color x:Key="Accent5Color">#72232D</Color>
+            <Color x:Key="Accent6Color">#8C333A</Color>
+            <Color x:Key="Accent7Color">#B54548</Color>
+            <Color x:Key="Accent8Color">#E5484D</Color>
+            <Color x:Key="Accent9Color">#EC5D5E</Color>
+            <Color x:Key="Accent11Color">#FF9592</Color>
+            <Color x:Key="Accent12Color">#FFD1D9</Color>
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
