--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Ruby.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Ruby.axaml
@@ -2,32 +2,32 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Default">
-            <Color x:Key="AccentColor0">#FFFCFD</Color>
-            <Color x:Key="AccentColor1">#FFF7F8</Color>
-            <Color x:Key="AccentColor2">#FEEAED</Color>
-            <Color x:Key="AccentColor3">#FFDCE1</Color>
-            <Color x:Key="AccentColor4">#FFCED6</Color>
-            <Color x:Key="AccentColor5">#F8BFC8</Color>
-            <Color x:Key="AccentColor6">#EFACB8</Color>
-            <Color x:Key="AccentColor7">#E592A3</Color>
-            <Color x:Key="AccentColor8">#E54666</Color>
-            <Color x:Key="AccentColor9">#DC3B5D</Color>
-            <Color x:Key="AccentColor10">#CA244D</Color>
-            <Color x:Key="AccentColor11">#64172B</Color>
+            <Color x:Key="Accent0Color">#FFFCFD</Color>
+            <Color x:Key="Accent1Color">#FFF7F8</Color>
+            <Color x:Key="Accent2Color">#FEEAED</Color>
+            <Color x:Key="Accent3Color">#FFDCE1</Color>
+            <Color x:Key="Accent4Color">#FFCED6</Color>
+            <Color x:Key="Accent5Color">#F8BFC8</Color>
+            <Color x:Key="Accent6Color">#EFACB8</Color>
+            <Color x:Key="Accent7Color">#E592A3</Color>
+            <Color x:Key="Accent8Color">#E54666</Color>
+            <Color x:Key="Accent9Color">#DC3B5D</Color>
+            <Color x:Key="Accent11Color">#CA244D</Color>
+            <Color x:Key="Accent12Color">#64172B</Color>
         </ResourceDictionary>
         <ResourceDictionary x:Key="Dark">
-            <Color x:Key="AccentColor0">#191113</Color>
-            <Color x:Key="AccentColor1">#1E1517</Color>
-            <Color x:Key="AccentColor2">#3A141E</Color>
-            <Color x:Key="AccentColor3">#4E1325</Color>
-            <Color x:Key="AccentColor4">#5E1A2E</Color>
-            <Color x:Key="AccentColor5">#6F2539</Color>
-            <Color x:Key="AccentColor6">#883447</Color>
-            <Color x:Key="AccentColor7">#B3445A</Color>
-            <Color x:Key="AccentColor8">#E54666</Color>
-            <Color x:Key="AccentColor9">#EC5A72</Color>
-            <Color x:Key="AccentColor10">#FF949D</Color>
-            <Color x:Key="AccentColor11">#FED2E1</Color>
+            <Color x:Key="Accent0Color">#191113</Color>
+            <Color x:Key="Accent1Color">#1E1517</Color>
+            <Color x:Key="Accent2Color">#3A141E</Color>
+            <Color x:Key="Accent3Color">#4E1325</Color>
+            <Color x:Key="Accent4Color">#5E1A2E</Color>
+            <Color x:Key="Accent5Color">#6F2539</Color>
+            <Color x:Key="Accent6Color">#883447</Color>
+            <Color x:Key="Accent7Color">#B3445A</Color>
+            <Color x:Key="Accent8Color">#E54666</Color>
+            <Color x:Key="Accent9Color">#EC5A72</Color>
+            <Color x:Key="Accent11Color">#FF949D</Color>
+            <Color x:Key="Accent12Color">#FED2E1</Color>
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
