feat(controls): 添加滑块控件并更新主题样式
- 新增滑块控件文件 `Slider.axaml`，包含水平和垂直滑块的样式和模板
- 修改 `HuskuiTheme.axaml` 引入的资源，从 `Colors.Accent.Neutral.axaml` 更改为 `Colors.Accent.Amber.axaml`
- 更新 `Page.axaml` 和 `ToggleSwitch.axaml` 中的样式设置，使用 `StaticResource` 来定义圆角
- 在 `ScrollBar.axaml` 中为滑块添加了手型光标样式
- 在 `ThicknessConverters.cs` 中添加了新的 `Vertical` 和 `Horizontal` 转换器来处理厚度的转换

--- a/src/Huskui.Avalonia/Controls/Page.axaml
+++ b/src/Huskui.Avalonia/Controls/Page.axaml
@@ -23,7 +23,6 @@
         <Setter Property="Padding" Value="{StaticResource PageContentMargin}" />
         <Setter Property="CanGoBack" Value="{Binding $parent[local:Frame].CanGoBack, Mode=OneWay}" />
         <Setter Property="Background" Value="{StaticResource TransparentBrush}" />
-        <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="FontWeight" Value="{StaticResource ControlFontWeight}" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
@@ -35,7 +34,8 @@
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
                         HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
-                        VerticalAlignment="{TemplateBinding VerticalAlignment}" ClipToBounds="True">
+                        VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                        BoxShadow="{TemplateBinding BoxShadow}">
                     <ScrollViewer
                         VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}"
                         HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
@@ -55,7 +55,8 @@
                                         Margin="0,0,12,0"
                                         Command="{Binding $parent[local:Frame].GoBackCommand}"
                                         IsVisible="{TemplateBinding IsBackButtonVisible}">
-                                    <fi:SymbolIcon Symbol="ArrowLeft" FontSize="12" Width="12" Height="12" />
+                                    <fi:SymbolIcon Symbol="ArrowLeft" FontSize="{StaticResource MediumFontSize}"
+                                                   HorizontalAlignment="Center" VerticalAlignment="Center" />
                                 </Button>
                                 <ContentPresenter Content="{TemplateBinding Header}"
                                                   ContentTemplate="{TemplateBinding HeaderTemplate}">
