--- a/src/Huskui.Avalonia/HuskuiTheme.axaml
+++ b/src/Huskui.Avalonia/HuskuiTheme.axaml
@@ -4,7 +4,7 @@
     <Styles.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceInclude Source="/Themes/Colors.Accent.Neutral.axaml" />
+                <ResourceInclude Source="/Themes/Colors.Accent.Amber.axaml" />
                 <ResourceInclude Source="/Themes/Colors.axaml" />
                 <ResourceInclude Source="/Themes/Basics.axaml" />
                 <ResourceInclude Source="/Themes/CornerRadius.axaml" />
