--- a/src/Huskui.Avalonia/Themes/Controls.axaml
+++ b/src/Huskui.Avalonia/Themes/Controls.axaml
@@ -36,10 +36,11 @@
         <ResourceInclude Source="/Controls/Popup.axaml" />
         <ResourceInclude Source="/Controls/ProgressBar.axaml" />
         <ResourceInclude Source="/Controls/ProgressRing.axaml" />
-        <ResourceInclude Source="/Controls/Separator.axaml" />
         <ResourceInclude Source="/Controls/ScrollBar.axaml" />
         <ResourceInclude Source="/Controls/ScrollViewer.axaml" />
+        <ResourceInclude Source="/Controls/Separator.axaml" />
         <ResourceInclude Source="/Controls/SkeletonContainer.axaml" />
+        <ResourceInclude Source="/Controls/Slider.axaml" />
         <ResourceInclude Source="/Controls/SplitButton.axaml" />
         <ResourceInclude Source="/Controls/StepControl.axaml" />
         <ResourceInclude Source="/Controls/StepItem.axaml" />
